# simsearch

./: .gitignore  README.md  dvc.yaml  pyproject.toml
data/embeddings/lora/: .gitignore
data/results/: .gitignore
models/clip_vit_lora_lightning/: .gitignore
scripts/: embed_with_clip.py  embed_with_lora_clip.py  evaluate_similiarity_search.py  train_clip_lora_lightning.py  viz_model.py
simsearch/: app.py  clip_embeddings.py  datasets.py  metrics.py  ui_app.py  vector_search.py
