[tool.poetry]
name = "simsearch"
version = "0.1.0"
description = ""
authors = ["Martha Robinson <martharoserobinson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = "^2.8.0"
torchvision = "^0.23.0"
transformers = "^4.55.2"
ruff = "^0.12.9"
click = "^8.2.1"
pandas = "^2.3.1"
faiss-cpu = "1.10.0"
dvc = {extras = ["s3"], version = "^3.62.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
